force-app/main/default/objects/ServiceContract/fields/Account_Manager__c.field-meta.xml
<CustomField>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </CustomField>