force-app/main/default/objects/ServiceContract/fields/Agreement_Id__c.field-meta.xml
<CustomField>
        <fullName>Agreement_Id__c</fullName>
        <label>Agreement Id</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>