force-app/main/default/objects/ServiceContract/fields/Agreement_Number__c.field-meta.xml
<CustomField>
        <fullName>Agreement_Number__c</fullName>
        <label>Agreement Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>