force-app/main/default/objects/ServiceContract/fields/Approval_Date__c.field-meta.xml
<CustomField>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </CustomField>