force-app/main/default/objects/ServiceContract/fields/Contact_del__c.field-meta.xml
<CustomField>
        <fullName>Contact_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts_del</relationshipName>
        <type>Lookup</type>
    </CustomField>