force-app/main/default/objects/ServiceContract/fields/Reseller__c.field-meta.xml
<CustomField>
        <fullName>Reseller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </CustomField>